[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Reratui Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sabry-awad97/reratui"
homepage = "https://reratui.dev"
documentation = "https://docs.rs/reratui"
keywords = ["tui", "terminal", "ui", "reactive", "ratatui"]
categories = ["command-line-interface", "gui"]

[workspace.dependencies]
# Internal dependencies
reratui = { path = "crates/reratui" }
reratui-charts = { path = "crates/reratui-charts" }
reratui-core = { path = "crates/reratui-core" }
reratui-forms = { path = "crates/reratui-forms" }
reratui-hooks = { path = "crates/reratui-hooks" }
reratui-icons = { path = "crates/reratui-icons" }
reratui-macro = { path = "crates/reratui-macro" }
reratui-ratatui = { path = "crates/reratui-ratatui" }
reratui-router = { path = "crates/reratui-router" }

# External dependencies
anyhow = "1.0.100"
crossterm = "0.29.0"
once_cell = "1.19"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Proc macro dependencies
syn = { version = "2.0.108", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.103"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
