[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Reratui Contributors <contributors@reratui.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sabry-awad97/reratui"
homepage = "https://github.com/sabry-awad97/reratui"
documentation = "https://docs.rs/reratui"
readme = "README.md"
keywords = ["tui", "terminal", "ui", "reactive", "ratatui"]
categories = ["command-line-interface", "gui", "asynchronous"]
rust-version = "1.85.0"

[workspace.dependencies]
# Internal dependencies
reratui = { path = "crates/reratui" }
reratui-charts = { path = "crates/reratui-charts" }
reratui-core = { path = "crates/reratui-core" }
reratui-forms = { path = "crates/reratui-forms" }
reratui-hooks = { path = "crates/reratui-hooks" }
reratui-icons = { path = "crates/reratui-icons" }
reratui-macro = { path = "crates/reratui-macro" }
reratui-panic = { path = "crates/reratui-panic" }
reratui-ratatui = { path = "crates/reratui-ratatui" }
reratui-router = { path = "crates/reratui-router" }
reratui-runtime = { path = "crates/reratui-runtime" }

# External dependencies
anyhow = "1.0.100"
better-panic = "0.3.0"
chrono = "0.4.42"
crossterm = { version = "0.29.0", features = ["event-stream"] }
human-panic = "2.0.4"
once_cell = "1.21.3"
parking_lot = "0.12.5"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
unicode-width = "0.2.0"

# Proc macro dependencies
syn = { version = "2.0.108", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0.41"
proc-macro2 = "1.0.103"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
