[package]
name = "reratui-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "React-inspired hooks for state management and side effects in Reratui TUI applications"
publish = false  # Internal crate - not published separately

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
ratatui = { workspace = true }
reratui-core = { workspace = true }
reratui-panic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
