[package]
name = "reratui-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "React-inspired hooks for state management and side effects in Reratui TUI applications"
publish = true

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
ratatui = { workspace = true }
reratui-core = { version = "0.1.0", path = "../reratui-core" }
reratui-panic = { version = "0.1.0", path = "../reratui-panic" }
tokio = { workspace = true }
tracing = { workspace = true }
