[package]
name = "reratui-hooks"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "React-inspired hooks for state management and side effects in Reratui TUI applications"
publish = true

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
reratui-core = { version = "0.2.1", path = "../reratui-core" }
reratui-panic = { version = "0.2.1", path = "../reratui-panic" }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
