[package]
name = "reratui-icons"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Icon library for Reratui TUI framework"
publish = false  # Internal crate - not published separately

[dependencies]
reratui-core = { workspace = true }
