[package]
name = "reratui-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for component definition, RSX syntax, and hook validation in Reratui"
publish = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
reratui-core = { workspace = true }
