[package]
name = "reratui-panic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Panic handling utilities for Reratui TUI framework"

[dependencies]
anyhow = { workspace = true }
better-panic = { workspace = true }
crossterm = { workspace = true }
human-panic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
