[package]
name = "reratui-ratatui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Ratatui backend adapter for Reratui TUI framework"
publish = true

[dependencies]
reratui-core = { version = "0.1.0", path = "../reratui-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
