[package]
name = "reratui-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime and event loop for Reratui TUI framework"

[dependencies]
reratui-core = { workspace = true }
reratui-hooks = { workspace = true }
reratui-panic = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
