[package]
name = "reratui-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Async runtime, event loop, and rendering engine for Reratui TUI applications"
publish = false  # Internal crate - not published separately

[dependencies]
reratui-core = { workspace = true }
reratui-hooks = { workspace = true }
reratui-panic = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
