[package]
name = "reratui-runtime"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Async runtime, event loop, and rendering engine for Reratui TUI applications"
publish = true

[dependencies]
reratui-core = { version = "0.2.0", path = "../reratui-core" }
reratui-hooks = { version = "0.2.0", path = "../reratui-hooks" }
reratui-panic = { version = "0.2.0", path = "../reratui-panic" }
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tokio = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"
anyhow = { workspace = true }
crossterm = { workspace = true }
