[package]
name = "reratui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "A modern, reactive TUI framework for Rust with React-inspired hooks and components, powered by ratatui"

[dependencies]
reratui-core = { workspace = true }
reratui-hooks = { workspace = true }
reratui-macro = { workspace = true }
reratui-ratatui = { workspace = true }
reratui-runtime = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
once_cell = { workspace = true }
ratatui = { workspace = true }
