[package]
name = "reratui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "A modern, reactive TUI framework for Rust with React-inspired hooks and components, powered by ratatui"
publish = true

[dependencies]
# Internal crates (not published separately - bundled in this crate)
reratui-core = { version = "0.2.0", path = "../reratui-core" }
reratui-hooks = { version = "0.2.0", path = "../reratui-hooks" }
reratui-macro = { version = "0.2.0", path = "../reratui-macro" }
reratui-ratatui = { version = "0.2.0", path = "../reratui-ratatui" }
reratui-runtime = { version = "0.2.0", path = "../reratui-runtime" }

# External dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
once_cell = { workspace = true }
ratatui = { workspace = true }
